fixes centering method to preserve first card effect

--- a/card_focus/cards.css
+++ b/card_focus/cards.css
@@ -3,7 +3,8 @@
 }
 
 .horizontal-card-row {
-    justify-content: center;
+    width: 50%;
+    margin: 0 auto;
 }
 
 /* if you're only using the vertical style cards, these can be moved into the above card-row */
